--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <div id="root"></div>
     <div id="modal"></div>
     <div id="notifications"></div>
+    <div id="dropdown"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
